--- a/secondChance-backend/package.json
+++ b/secondChance-backend/package.json
@@ -14,11 +14,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.8.0",
+    "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "pino": "^8.17.2",
     "pino-http": "^9.0.0",
